--- a/docs/404.md
+++ b/docs/404.md
@@ -30,8 +30,8 @@
         }
     </style>
     <style>
-        @import url(http://privatesky.xyz/assets/fonts/fontawesome/font-awesome.min.css);
-        @import url(http://privatesky.xyz/assets/fonts/nunito/nunito.css);
+        @import url(https://privatesky.xyz/assets/fonts/fontawesome/font-awesome.min.css);
+        @import url(https://privatesky.xyz/assets/fonts/nunito/nunito.css);
     </style>
     <link rel="apple-touch-icon" href="/assets/icon/icon.png">
     <link rel="icon" type="image/x-icon" href="/assets/icon/favicon.ico">
