--- a/docs/404.md
+++ b/docs/404.md
@@ -8,13 +8,13 @@
     <meta name="theme-color" content="#16161d">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta http-equiv="x-ua-compatible" content="IE=Edge">
-       <link rel="modulepreload" href="/build/p-6vxztqin.js">
+         <link rel="modulepreload" href="/build/p-fejwgi47.js">
          <link rel="modulepreload" href="/build/p-aa67fb06.js">
          <link rel="modulepreload" href="/build/p-ca344ecc.js">
          <link rel="modulepreload" href="/build/p-cb87a2fc.js">
          <link rel="modulepreload" href="/build/p-d76f0ca1.js">
-         <link rel="modulepreload" href="/build/p-v9420gld.entry.js">
-         <script type="module" src="/build/p-6vxztqin.js" data-resources-url="/build/" data-stencil-namespace="app"></script>
+         <link rel="modulepreload" href="/build/p-m0e0prdr.entry.js">
+         <script type="module" src="/build/p-fejwgi47.js" data-resources-url="/build/" data-stencil-namespace="app"></script>
          <script nomodule="" src="/build/app.js"></script>
     <style>
         body {
