--- a/docs/404.md
+++ b/docs/404.md
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0">
     <meta name="theme-color" content="#16161d">
     <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="google-site-verification" content="LyhlF9GagOo7ZqqlC8Ne1nqqpkRLrxiq9qAeuUO4gwk" />
     <meta http-equiv="x-ua-compatible" content="IE=Edge">
       <link rel="modulepreload" href="/build/p-jb3vtmyk.js">
       <link rel="modulepreload" href="/build/p-aa67fb06.js">
